--- a/index.html
+++ b/index.html
@@ -5,36 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Besthouse</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <!--Spinner-->
+    <div class="spinner">
+        <div class="loading">
+            <div class="arc"></div>
+            <div class="arc"></div>
+            <div class="arc"></div>
+        </div>
+    </div>
+    <!--Spinner end-->
+
     <div class="wrapper">
-        <div class="site">
+        <div id="hero" class="site">
             <!--Header-->
-            <header class="header" data-scroll="120" data-scroll-show>
+            <header class="header" data-scroll="90" data-scroll-show data-lp data-watch>
                 <div class="header__container">
                     <div class="header__left">
-                        <a href="#" class="header__logo">
+                        <a href="#" data-goto="#hero" data-goto-top="0" class="header__logo">
                             <img src="./images/logo.svg" alt="Логотип">
                         </a>
-                        <nav class="header__nav nav">
-                            <ul class="nav__list">
-                                <li class="nav__item">
-                                    <a href="#" class="nav__link is-active">Портфолио</a>
-                                </li>
-                                <li class="nav__item">
-                                    <a href="#" class="nav__link">Услуги</a>
-                                </li>
-                                <li class="nav__item">
-                                    <a href="#" class="nav__link">Цены</a>
-                                </li>
-                                <li class="nav__item">
-                                    <a href="#" class="nav__link">Контакты</a>
-                                </li>
-                            </ul>
-                        </nav>
+                        <div class="header__menu menu">
+                            <nav class="menu__body">
+                                <ul class="menu__list">
+                                    <li class="menu__item">
+                                        <a href="#" data-goto="#gallery" data-goto-top="80"
+                                            class="menu__link is-active">Портфолио</a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a data-goto="#service" data-goto-top="80" href="#"
+                                            class="menu__link">Услуги</a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a data-goto="#price" data-goto-top="80" href="#" class="menu__link">Цены</a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a data-goto="#contact" data-goto-top="80" href="#"
+                                            class="menu__link">Контакты</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+
                     </div>
                     <div class="header__contact">
                         <a href="tel:+375251234567" class="header__contact-background">+375 (25) 123-45-67</a>
@@ -47,19 +64,19 @@
             <!--Hero-->
             <section class="hero">
                 <div class="hero__wrapper">
-                    <div class="hero__container">
+                    <div class="hero__container" data-watch>
                         <div class="hero__main">
-                            <h1 class="hero__title">
+                            <h1 class="hero__title" data-watch>
                                 Строительство <br>
-                                и ремонт в Гомеле
+                                и ремонт в Бумеле
                             </h1>
-                            <p class="hero__descr">
+                            <p class="hero__descr" data-watch>
                                 Надежное будущее строим вместе
                             </p>
-                            <a href="#" class="button hero__button">Получить консультацию
+                            <a href="#" data-popup="#popup" data-watch class="button hero__button">Получить консультацию
                             </a>
                         </div>
-                        <div class="hero__slider swiper">
+                        <div class="hero__slider swiper" data-watch>
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper">
                                 <!-- Slides -->
@@ -94,33 +111,33 @@
             <!--Work-->
             <section class="work">
                 <div class="work__container">
-                    <h2 class="section__title section__title--lines">
+                    <h2 class="section__title section__title--lines" data-watch>
                         КАК МЫ РАБОТАЕМ
                     </h2>
                     <div class="work__items">
-                        <div class="work__item">
+                        <div class="work__item" data-watch>
                             <p class="work__item-text">
                                 Бесплатный выезд мастера на объект для оценки
                                 работы
                             </p>
                         </div>
-                        <div class="work__item">
+                        <div class="work__item" data-watch>
                             <p class="work__item-text">
                                 Обсуждение работы с заказчиком
                             </p>
                         </div>
-                        <div class="work__item">
+                        <div class="work__item" data-watch>
                             <p class="work__item-text">
                                 Оформление и подписание договора
                             </p>
                         </div>
-                        <div class="work__item">
+                        <div class="work__item" data-watch>
                             <p class="work__item-text">
                                 Выполнение работ в соответствии с пожеланиями
                                 заказчика
                             </p>
                         </div>
-                        <div class="work__item">
+                        <div class="work__item" data-watch>
                             <p class="work__item-text">
                                 Прием работы заказчиком и окончательный расчет
                             </p>
@@ -130,28 +147,28 @@
             </section>
             <!--Work end-->
             <!--Services-->
-            <section class="service">
+            <section id="service" data-watch-threshold="0.5" data-watch="navigator" class="service">
                 <div class="service__container">
-                    <div class="section__title section__title--underline">
+                    <div class="section__title section__title--underline" data-watch>
                         НАШИ УСЛУГИ
                     </div>
                     <div data-tabs class="service__tabs">
                         <nav data-tabs-titles class="tabs__navigation">
-                            <div class="tabs__title _tab-active background background--1">
+                            <div class="tabs__title _tab-active background background--1" data-watch>
                                 <span>Отделочные работы</span>
                             </div>
-                            <div class="tabs__title background background--2">
+                            <div class="tabs__title background background--2" data-watch>
                                 <span> Строительство домов</span>
                             </div>
-                            <div class="tabs__title background background--3">
+                            <div class="tabs__title background background--3" data-watch>
                                 <span>Электрика</span>
                             </div>
-                            <div class="tabs__title background background--4">
+                            <div class="tabs__title background background--4" data-watch>
                                 <span>Сантехника</span>
                             </div>
                         </nav>
-                        <div data-tabs-body class="tabs__content">
-                            <div class="tabs__body background background--1">
+                        <div data-tabs-body class="tabs__content" data-watch>
+                            <div class="tabs__body background background--1 ">
                                 <h4 class="tabs__body-title">
                                     Отделочные работы
                                 </h4>
@@ -213,13 +230,13 @@
                             </div>
                         </div>
                     </div>
-                    <p class="service__text">
+                    <p class="service__text" data-watch>
                         Для многих ремонт — это что-то вроде стихийного
                         бедствия, но чем тщательнее вы его спланируете, тем
                         проще будет его пережить. А уютная, привлекательная и
                         чистая квартира – это мечта любого человека.
                     </p>
-                    <p class="service__banner">
+                    <p class="service__banner" data-watch>
                         Давайте воплотим Ваши мечты в реальность!
                     </p>
                 </div>
@@ -229,7 +246,7 @@
             <section class="connection">
                 <div class="connection__wrapper">
                     <div class="connection__container connection__container--top">
-                        <form action="#" class="connection__form form">
+                        <form action="#" class="connection__form form" data-watch>
                             <fieldset>
                                 <h3 class="form__title">ЗАПОЛНИТЕ ФОРМУ</h3>
                                 <div class="form__field">
@@ -257,7 +274,7 @@
                                 </div>
                             </fieldset>
                         </form>
-                        <div class="connection__image"></div>
+                        <div class="connection__image" data-watch></div>
                     </div>
                 </div>
 
@@ -267,7 +284,7 @@
             <!--About-->
             <section class="about">
                 <div class="about__container">
-                    <div class="about__main">
+                    <div class="about__main" data-watch>
                         <h2 class="about__title">О НАС</h2>
                         <div class="about__list">
                             <div class="about__item">
@@ -285,7 +302,7 @@
                             <div class="about__item">Доступные цены</div>
                         </div>
                     </div>
-                    <div class="about__slider swiper">
+                    <div class="about__slider swiper" data-watch>
                         <div class="about__wrapper swiper-wrapper">
                             <div class="about__slide swiper-slide">
                                 <div class="about__slide-item">
@@ -320,43 +337,43 @@
             </section>
             <!--About end-->
             <!--Gallery-->
-            <section class="gallery">
+            <section id="gallery" data-watch-threshold="0.5" data-watch="navigator" class="gallery">
                 <div class="gallery__container">
-                    <h2 class="section__title section__title--lines">
+                    <h2 class="section__title section__title--lines" data-watch>
                         ГАЛЕРЕЯ РАБОТ
                     </h2>
                     <div class="gallery__items">
-                        <div class="gallery__item">
+                        <a href="#" data-popup="#popup__gallery" class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-1.jpg" alt="">
                             </div>
                             <div class="gallery__item-bottom">ПЛИТКА</div>
-                        </div>
-                        <div class="gallery__item">
+                        </a>
+                        <div class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-2.jpg" alt="">
                             </div>
                             <div class="gallery__item-bottom">КЛАДКА</div>
                         </div>
-                        <div class="gallery__item">
+                        <div class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-3.jpg" alt="">
                             </div>
                             <div class="gallery__item-bottom">ОТДЕЛКА</div>
                         </div>
-                        <div class="gallery__item">
+                        <div class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-4.jpg" alt="">
                             </div>
                             <div class="gallery__item-bottom">КРОВЛЯ</div>
                         </div>
-                        <div class="gallery__item">
+                        <div class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-5.jpg" alt="">
                             </div>
                             <div class="gallery__item-bottom">САНТЕХНИКА</div>
                         </div>
-                        <div class="gallery__item">
+                        <div class="gallery__item" data-watch>
                             <div class="gallery__item-img">
                                 <img src="./images/gallery/img-6.jpg" alt="">
                             </div>
@@ -367,10 +384,10 @@
             </section>
             <!--Gallery end-->
             <!--Price end-->
-            <section class="price">
+            <section id="price" data-watch-threshold="0.5" data-watch="navigator" class="price">
                 <div class="price__container">
-                    <h2 class="section__title">ПРАЙС-ЛИСТ НА УСЛУГИ</h2>
-                    <div data-tabs class="price-tabs">
+                    <h2 class="section__title" data-watch>ПРАЙС-ЛИСТ НА УСЛУГИ</h2>
+                    <div data-tabs class="price-tabs" data-watch>
                         <nav data-tabs-titles class="price-tabs__navigation">
                             <button type="button" class="price-tabs__title _tab-active">
                                 Отделка
@@ -734,20 +751,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="price__button">
+                    <div class="price__button" data-watch>
                         <button class="button">Скачать весь прайс</button>
                     </div>
                 </div>
             </section>
             <!--Price end-->
             <!--Connection2-->
-            <section class="connection connection--bottom">
+            <section id="contact" data-watch-threshold="0.5" data-watch="navigator"
+                class="connection connection--bottom">
                 <h2 class="section__title">
                     СВЯЖИТЕСЬ С НАМИ ИЛИ ОСТАВЬТЕ ЗАЯВКУ
                 </h2>
                 <div class="connection__wrapper">
                     <div class="connection__container connection__container--bottom">
-                        <form action="#" class="connection__form form">
+                        <form action="#" class="connection__form form" data-watch>
                             <fieldset>
                                 <legend class="form__title">ЗАПОЛНИТЕ ФОРМУ</legend>
                                 <div class="form__field">
@@ -775,14 +793,14 @@
                                 </div>
                             </fieldset>
                         </form>
-                        <div class="connection__image"></div>
+                        <div class="connection__image" data-watch></div>
                     </div>
                 </div>
 
             </section>
             <!--Connection2 end-->
             <!--Footer-->
-            <footer class="footer">
+            <footer class="footer" data-watch>
                 <div class="footer__container">
                     <div class="footer__main">
                         <div class="footer__main-left">
@@ -804,11 +822,29 @@
             <!--Footer end-->
         </div>
     </div>
-
-    <script src="scripts/smoothScroll.js"></script>
-    <script src="scripts/functions.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="dist/script.min.js"></script>
+    <div id="popup" aria-hidden="true" class="popup">
+        <div class="popup__wrapper">
+            <div class="popup__content">
+                <button data-close type="button" class="popup__close">Закрыть</button>
+                <div class="popup__text">
+                </div>
+            </div>
+        </div>
+        <div id="popup__gallery" aria-hidden="true" class="popup popup-gallery">
+            <div class="popup__wrapper">
+                <div class="popup-gallery__content popup__content">
+                    <button data-close type="button" class="popup__close">Закрыть</button>
+                    <div class="popup__text">
+                        <p>cdnjdjdndn</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="scripts/smoothScroll.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+        <!-- <script src="scripts/functions.js"></script> -->
+        <script src="scripts/script.js"></script>
+        <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
